# sdlcurses

libSDLcurses/: AUTHORS  Makefile.am  Makefile.in  README  aclocal.m4  config.h.in  configure  configure.ac  configure.scan  sdl_ncurses.c  sdl_ncurses.h
libSDLcurses/autom4te.cache/: output.0  output.1  output.2  output.3  output.4  output.5  output.6  requests  traces.0  traces.1  traces.2  traces.3  traces.4  traces.5  traces.6
